tests/NormalTests/paczka2/big_fuzzy/42541770.err
Error in line 20: 7tqH S2} 33},5
Error in line 29: S264 A824 14,4
Error in line 15: 7tqH S21 95,8
Error in line 30: 9X4zRyAVjQ S21 5,0
Error in line 44: S264 S21 55,84
Error in line 55: 39XmhHE0HdO S708 170,58
Error in line 59: s6DGMtD1QK S708 45,9
Error in line 45: S264 S21 257,1
Error in line 66: S264 S21 15,7
Error in line 67: S264 S264 82,1
Error in line 64: 9X4zRyAVjQ S21 28,2
Error in line 50: 39XmhHE0HdO S708 58,1
Error in line 76: 9X4zRyAVjQ S708 79,5
Error in line 79: 39XmhHE0HdO S264 64,7
Error in line 89: S264 S264 42,9
Error in line 84: 39XmhHE0HdO S708 98,6
Error in line 87: 7tqH S708 3,7
Error in line 90: S264 S21 74,4
Error in line 106: zjz S264 39,6
Error in line 129: 9X4zRyAVjQ A824 55,5
Error in line 136: zjz S21 88,3
Error in line 146: 7tqH S21 33,9
Error in line 166: zjz S21 8,6
Error in line 161: 39XmhHE0HdO S708 53,7
Error in line 173: 39XmhHE0HdO A824 5,7
Error in line 172: zjz A824 49,6
Error in line 175: 9X4zRyAVjQ S21 38,7
Error in line 186: 7tqH A824 79,90
Error in line 190: 9X4zRyAVjQ S708 239,3
Error in line 188: zjz A824 7,0
Error in line 192: zjz S21 32,7
Error in line 197: S264 S708 27,9
Error in line 208: S264 S21 59,1
Error in line 204: 8Ep1FPLjle A824 6,0
Error in line 210: 39XmhHE0HdO A824 39,1
Error in line 224: 7tqH S21 66,9
Error in line 223: S264 S21 22,4
Error in line 234: 7tqH S708 13,27
Error in line 235: 8Ep1FPLjle S708 88,2
Error in line 239: zjz S708 81,00
Error in line 206: zjz S264 133,4
Error in line 237: 9X4zRyAVjQ S264 38,6
Error in line 243: 9X4zRyAVjQ A824 12,1
